--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
   <div class="glightbox"></div>
 
   <!-- Preloader -->
-  <div id="preloader"></div>
+  <!-- <div id="preloader"></div> -->
 
   <!-- Node Modules JavaScript Files  -->
   <script src="node_modules/@srexi/purecounterjs/dist/purecounter_vanilla.js"></script>
