--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MyResume</title>
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-  <!-- Node Modules CSS Files  -->
-  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.min.css">
-  <link rel="stylesheet" href="node_modules/aos/dist/aos.css" />
-  <link rel="stylesheet" href="node_modules/swiper/swiper-bundle.min.css">
-  <link rel="stylesheet" href="node_modules/glightbox/dist/css/glightbox.min.css">
-  <link rel="stylesheet" href="node_modules/aos/dist/aos.css">
+  <link href="/assets/img/favicon.png" rel="icon">
+  <link href="/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- CDN CSS Files  -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" rel="stylesheet">
   <!-- Main CSS File  -->
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -675,11 +674,11 @@
     <!-- /Testimonials Section  -->
     <!-- Contact Section  -->
     <section class="contact section" id=contact>
-      <div class="container section__title"  data-aos="fade-up" data-aos-delay="100">
+      <div class="container section__title">
         <h2>Contact</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div>
-      <div class="container"  data-aos="fade-up" data-aos-delay="200">
+      <div class="container">
         <div class="row">
           <div class="col-lg-4">
             <div class="contact__info">
@@ -760,17 +759,16 @@
   <div class="glightbox"></div>
 
   <!-- Preloader -->
-  <!-- <div id="preloader"></div> -->
+  <div id="preloader"></div>
 
-  <!-- Node Modules JavaScript Files  -->
-  <script src="node_modules/@srexi/purecounterjs/dist/purecounter_vanilla.js"></script>
-  <script src="node_modules/aos/dist/aos.js"></script>
-  <script src="node_modules/swiper/swiper-bundle.min.js"></script>
-  <script src="node_modules/typed.js/dist/typed.umd.js"></script>
-  <script src="node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="node_modules/isotope-layout/dist/isotope.pkgd.min.js"></script>
-  <script src="node_modules/glightbox/dist/js/glightbox.min.js"></script>
-  <script src="node_modules/aos/dist/aos.js"></script>
+  <!-- CDN JavaScript Files  -->
+  <script src="https://cdn.jsdelivr.net/npm/@srexi/purecounterjs"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+  <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
   <!-- Main JavaScript File  -->
   <script src="assets/js/script.js"></script>
 </body>
